Opened 13 years ago

Closed 12 years ago

#8804 closed bug (fixed)

Controls incorrectly enabled upon switching to/from fullscreen.

Reported by: mmadia Owned by: stpere
Priority: normal Milestone: R1
Component: Applications/MediaPlayer Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev44418

When MediaPlayer is on the last file of the playlist (with no looping enabled), the Next button is normally deactivated. However, switching between full screen and previous size will result in the Next button being enabled. Clicking the button will result in nothing.

Expected behavior: Don't enable the Next button

Change History (2)

comment:1 by stpere, 12 years ago

Owner: changed from stippi to stpere
Status: newin-progress

comment:2 by stpere, 12 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev44584! Thanks!

Note: See TracTickets for help on using tickets.