MediaPlayer: Toggling Fullscreen wrongly reset control status

All controls were enabled when toggling fullscreen on and off;
now it recalls the argument last used in SetEnabled() and reuse it
when called in AttachedInWindow() (which occurs in such toggling)

Fixes #8804.